--- a/communityForum/templates/accounts/signup.html
+++ b/communityForum/templates/accounts/signup.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Log In</title>
+    <title>Sign Up</title>
 
 </head>
 <body>
@@ -49,7 +49,7 @@
 
         <div class="login-form py-5">
             
-            <h2 class="mb-5">Welcome Back!</h2>
+            <h2 class="mb-5">Create a free account</h2>
 
             <form method="POST">
 
@@ -59,11 +59,11 @@
                     {{form | crispy}}
                 </div>
                 
-                <button class="btn btn-primary px-3" type="submit">Login</button>
+                <button class="btn btn-primary px-3" type="submit">Sign Up</button>
             </form>
 
             <div class="my-3">
-                <small><a href="#">Forgot your password</a> or New here? <a href="{% url 'signup' %}">create a free account.</a></small>
+                <small>Already have an account? <a href="{% url 'login' %}">Login now.</a></small>
             </div>
 
         </div>
