--- a/communityForum/templates/index.html
+++ b/communityForum/templates/index.html
@@ -9,13 +9,52 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
+    <style>
+        .hero-text{
+            padding-top: 150px;
+        }
+        .image{
+            padding-top:80px;
+        }
+        .img-fluid{
+            width: 100%;
+            height: 100%;
+        }
+        .mb-2{
+            text-align:justify;
+        }
+        @media screen and (max-width: 480px) {
+  .body {
+    text-align: center;
+  }
+  .p{
+      padding:5px;
+      margin: 6px;
+  }
+}
+    </style>
+
 
 </head>
-<body>
-
-    <div class="container my-5 text-center">
-        <h2>Welcome to ATTC Community Forum!</h2>
-    </div>
-    
+<body class="body">
+    <div class="col-md-9 pt-5 m-auto">
+        <div class="row">
+        <div class="row justify-content-md-center just">
+            <!--for get started coloumn-->
+          <div class="col-md-6 hero-text order-md-1 order-2 justify-content-center">
+           <h1 class="font-weight-bold mb-4">WELCOME TO ATTC COMMUNITY FORUM </h1>
+           <div class="mb-4">
+            <p class="">A platform for students and teacher of ATTC where they can clear their doubts related to college.
+            </p>
+            <br>
+            <div class="mt-2"><button type="button" class="btn btn-primary px-5 py-2">Get Started</button></div>
+           </div>
+           <!-- for image coloumn-->
+           </div>
+          <div class="col-md-6 order-md-2 order-1 image">
+                <img src="../assests/for.webp" class="img-fluid" alt="communityforum image">
+          </div>
+        </div>
+      </div>   
 </body>
 </html>
