deleting unwanted images

--- a/communityForum/templates/accounts/profile.html
+++ b/communityForum/templates/accounts/profile.html
@@ -12,7 +12,7 @@
         <div class="row">
           <div class="col-sm">
                 <div class="p-2">
-                 <img  class="w-50" src="./default-profile-img.jpg" alt="image">
+                 <img  class="w-50" src="../communityForum/assests/default-profile-img.jpg" alt="image">
                 </div>
           </div>
           <div class="col-sm">
