--- a/communityForum/templates/accounts/profile.html
+++ b/communityForum/templates/accounts/profile.html
@@ -4,15 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profile</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+
+    {% load static %}
+
+    <style>
+        .profile-img{
+            height: 170px;
+            width: 170px;
+            object-fit: cover;
+        }
+    </style>
+
 </head>
 <body>
 
-    <h2>Profile</h2>
+    <div class="container py-5">
+        {% for message in messages %}
+            
+            <div class="w-50 m-auto">
+                <div class=" alert alert-info alert-dismissible fade show" role="alert">
+                    <span>{{message}}</span>
+                </div>
+            </div>
+           
+        {% endfor %}
 
-    <div class="profile-sc">
-        <small>@{{usr.username}}</small>
+        <div class="col-8 m-auto">
+            <div class="row">
+
+                <div class="col-3 text-center">
+                    <img src="{{u_page.profile_img.url}}" alt="profile image" class="rounded-circle profile-img border border-primary" >
+                </div>
+
+                <div class="col-9">
+                    <h2 class="mb-0 mt-4"> 
+                        {% if usr.first_name %}
+                            {{usr.first_name}} {{usr.first_name}} 
+                        {% else %}
+                            {{usr.username}}
+                        {% endif %}
+                    </h2>
+
+                    <small class="text-muted">@{{usr.username}} </small>
+                    {% if usr.is_staff %}
+                        &nbsp; <i class="bi bi-check-circle"></i>
+                    {% endif %}
+
+                    {% if user.is_authenticated %}
+                        {% if user == u_page.user %}
+                            <div class="mt-3">
+                                <a href="#" class="btn btn-outline-primary btn-sm">edit profile</a> &nbsp;&nbsp;
+                                <a href="{% url 'logout' %}" class="btn btn-primary btn-sm">logout</a>
+                            </div>
+                        {% endif %}
+                    {% endif %}
+                    
+                </div>
+            </div>
+        </div>
+             
     </div>
     
 </body>
 </html>
+
+
