--- a/communityForum/templates/accounts/login.html
+++ b/communityForum/templates/accounts/login.html
@@ -1,33 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <!--java bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+{% extends "base.html" %}
 
-    <title>Log In</title>
+{% block title %} LogIn {% endblock %}
 
-</head>
-<body>
-   <div class="container-fluid">
-     <div class="row justify-content-center align-items-center h-100">
-            <div class="col-md-3">
-                <div class="mt-5">
-                    <form>  
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" placeholder="username">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" placeholder="password"><br>
-                        <input class="btn btn-primary" type="submit" value="Login">
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-</body>
-</html>
+{% block body %}
+
+{% load crispy_forms_tags %}
+
+{% for message in messages %}
+            
+<div class="w-50 m-auto">
+    <div class=" alert alert-info alert-dismissible fade show" role="alert">
+        <span>{{message}}</span>
+    </div>
+</div>
+
+{% endfor %}
+
+
+{% if user.is_authenticated %}
+
+    <div class="row">
+        <div class="col-10 m-auto mt-5 bg-light p-4 rounded text-center">
+            <p>You are logged In as <a href="{% url 'profile' user%}">{{user}}</a> <br> <a href="{% url 'logout'%}">logout</a> to login another account.</p>
+        </div>         
+    </div>
+    
+{% else %}
+
+
+
+<form method="POST">
+
+    <h2>Login</h2>
+
+    {% csrf_token %}
+
+    <div class="mb-3">
+        {{form | crispy}}
+    </div>
+    
+    <button class="btn btn-primary px-3" type="submit">Login</button>
+</form>
+
+<div class="mt-3">
+    <small>New here? <a href="{% url 'signup' %}">Sign Up</a></small>
+</div>
+
+
+{% endif %}
+
+
+{% endblock %}
