--- a/communityForum/templates/accounts/profile.html
+++ b/communityForum/templates/accounts/profile.html
@@ -1,31 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <title>Profile</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+{% extends "base.html" %}
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+{% block title %} {{user}} {% endblock %}
 
-    {% load static %}
+{% load static %}
 
-    <style>
-        .profile-img{
-            height: 170px;
-            width: 170px;
-            object-fit: cover;
-        }
-    </style>
+{% block body %}
 
-</head>
-<body>
-
-    <div class="container py-5">
+    <div class="py-5">
         {% for message in messages %}
             
             <div class="w-50 m-auto">
@@ -71,28 +53,6 @@
         </div>
              
     </div>
-    
-=======
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>Profile</title>
-</head>
-<body>
-    <div class="container mt-9">
-        <div class="row">
-          <div class="col-sm">
-                <div class="p-2">
-                 <img  class="w-50" src="../communityForum/assests/default-profile-img.jpg" alt="image">
-                </div>
-          </div>
-          <div class="col-sm">
-            <div><h2>Andronicus Lepcha</h2></div>
-            <div><p>andronicuslepcha</p></div>
-            <div><a href=""><button class="btn btn-primary">Logout</button></a></div>
-          </div>
-        </div>
-      </div>
->>>>>>> 58277dacc1aac009f14a12f85ee4d92430963c18
-</body>
-</html>
 
+{% endblock %}
 
