--- a/communityForum/templates/accounts/signup.html
+++ b/communityForum/templates/accounts/signup.html
@@ -1,83 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+{% extends "base.html" %}
 
-    <title>Sign Up</title>
+{% block title %} Sign Up{% endblock %}
 
-</head>
-<body>
+{% block body %}
 
-    {% load crispy_forms_tags %}
+{% load crispy_forms_tags %}
 
-
-    <main class="container p-5">
-
-        {% if user.is_authenticated %}
-
-        <div class="row">
-            <div class="col-10 m-auto mt-5 bg-light p-4 rounded text-center">
-                <p>You are logged In as <a href="#">{{user}}</a> <br> <a href="{% url 'logout'%}">logout</a> to login another account.</p>
-            </div>
-
+{% for message in messages %}
             
-            
-        </div>
-    
-        {% else %}
-    
-        {% for message in messages %}
-            
+<div class="w-50 m-auto">
+    <div class=" alert alert-info alert-dismissible fade show" role="alert">
+        <span>{{message}}</span>
+    </div>
+</div>
 
-            <div class="w-50 m-auto">
-                <div class=" alert alert-info alert-dismissible fade show" role="alert">
-                    <span>{{message}}</span>
-                </div>
-            </div>
+{% endfor %}
 
-       
 
-           
-        {% endfor %}
+{% if user.is_authenticated %}
 
+    <div class="row">
+        <div class="col-10 m-auto mt-5 bg-light p-4 rounded text-center">
+            <p>You are logged In as <a href="{% url 'profile' user%}">{{user}}</a> <br> <a href="{% url 'logout'%}">logout</a> to login another account.</p>
+        </div>  
         
-
-        <div class="login-form py-5">
-            
-            <h2 class="mb-5">Create a free account</h2>
-
-            <form method="POST">
-
-                {% csrf_token %}
-
-                <div class="mb-3">
-                    {{form | crispy}}
-                </div>
-                
-                <button class="btn btn-primary px-3" type="submit">Sign Up</button>
-            </form>
-
-            <div class="my-3">
-                <small>Already have an account? <a href="{% url 'login' %}">Login now.</a></small>
-            </div>
-
-        </div>
-
-        {% endif %}
-
-    </main>
-
+    </div>
     
+{% else %}
 
 
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<form method="POST">
 
-</body>
-</html>
+    <h2>Sign Up</h2>
+
+    {% csrf_token %}
+
+    <div class="mb-3">
+        {{form | crispy}}
+    </div>
+    
+    <button class="btn btn-primary px-3" type="submit">Sign Up</button>
+</form>
+
+<div class="mt-3">
+    <small>Already have an account? <a href="{% url 'login' %}">Login</a></small>
+</div>
+
+{% endif %}
+
+
+{% endblock %}
