--- a/communityForum/templates/index.html
+++ b/communityForum/templates/index.html
@@ -1,43 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+{% extends "base.html" %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+{% block title %} Home {% endblock %}
 
-    <style>
-        .hero-text{
-            padding-top: 150px;
-        }
-        .image{
-            padding-top:80px;
-        }
-        .img-fluid{
-            width: 100%;
-            height: 100%;
-        }
-        .mb-2{
-            text-align:justify;
-        }
-        @media screen and (max-width: 480px) {
-  .body {
-    text-align: center;
-  }
-  .p{
-      padding:5px;
-      margin: 6px;
-  }
-}
-    </style>
+{% block body %}
 
+<div class="row">
+    <div class="col-md-7 m-auto pt-5 text-center">
+        <h1 class="mb-3">Welcome to ATTC Community Forum</h1>
+        <p class="mb-3">A platfrom for students and teachers of ATTC where they can clear their doubts related to colleges</p>
+        <a class="btn btn-primary py-2 px-5" href="{% url 'signup' %}"> Get Started</a>
+    </div>
+</div>
 
-</head>
-<body class="body">
-    <div class="col-md-9 pt-5 m-auto">
+{% endblock %}
+
+    <div class="col-md-9 pt-5">
         <div class="row">
         <div class="row justify-content-md-center just">
             <!--for get started coloumn-->
@@ -49,11 +26,8 @@
             <br>
             <div class="mt-2"><button type="button" class="btn btn-primary px-5 py-2">Get Started</button></div>
            </div>
-           <!-- for image coloumn-->
            </div>
-          <div class="col-md-6 order-md-2 order-1 image">
-                <img src="../assests/for.webp" class="img-fluid" alt="communityforum image">
-          </div>
+          
         </div>
       </div>   
 </body>
