--- a/communityForum/templates/accounts/login.html
+++ b/communityForum/templates/accounts/login.html
@@ -8,13 +8,13 @@
 {% load crispy_forms_tags %}
 
 {% for message in messages %}
-            
-<div>
-    <div>
-        <span>{{message}}</span>
+        
+    <div class="w-50 m-auto">
+        <div class=" alert alert-info alert-dismissible fade show" role="alert">
+            <span>{{message}}</span>
+        </div>
     </div>
-</div>
-
+    
 {% endfor %}
 
 
@@ -29,10 +29,11 @@
 {% else %}
 
 
+<div class="col-4 m-auto">
 
 <form method="POST">
 
-    <h2>Login</h2>
+    <h2 class="mb-4">Log In </h2>
 
     {% csrf_token %}
 
@@ -40,11 +41,13 @@
         {{form | crispy}}
     </div>
     
-    <button type="submit">Login</button>
+    <button class="mt-3 btn btn-primary" type="submit">Login</button>
 </form>
 
-<div>
+<div class="mt-2">
     <small>New here? <a href="{% url 'signup' %}">Sign Up</a></small>
+</div>
+
 </div>
 
 
