--- a/communityForum/templates/accounts/profile.html
+++ b/communityForum/templates/accounts/profile.html
@@ -7,52 +7,53 @@
 
 {% block body %}
 
-    <div>
-        {% for message in messages %}
-            
-            <div >
-                <div role="alert">
-                    <span>{{message}}</span>
-                </div>
-            </div>
-           
-        {% endfor %}
-
-        <div>
-            <div>
-
-                <div>
-                    <img src="{{usr.profile.profile_img.url}}">
-                </div>
-
-                <div>
-                    <h2> 
-                        {% if usr.first_name %}
-                            {{usr.first_name}} {{usr.last_name}} 
-                        {% else %}
-                            {{usr.username}}
-                        {% endif %}
-                    </h2>
-
-                    <small>@{{usr.username}} </small>
-                    {% if usr.is_staff %}
-                        &nbsp; <span>staff</span>
-                    {% endif %}
-
-                    {% if user.is_authenticated %}
-                        {% if user == u_page.user %}
-                            <div>
-                                <a href="{% url 'edit-profile' %}" >edit profile</a> &nbsp;&nbsp;
-                                <a href="{% url 'logout' %}">logout</a>
-                            </div>
-                        {% endif %}
-                    {% endif %}
-                    
-                </div>
+<div class="py-5">
+    {% for message in messages %}
+        
+        <div class="w-50 m-auto">
+            <div class=" alert alert-info alert-dismissible fade show" role="alert">
+                <span>{{message}}</span>
             </div>
         </div>
-             
+       
+    {% endfor %}
+
+    <div class="col-8 m-auto">
+        <div class="row">
+
+            <div class="col-3 text-center">
+                <img src="{{usr.profile.profile_img.url}}" alt="profile image" class="rounded-circle profile-img border border-primary" >
+            </div>
+
+            <div class="col-9">
+                <h2 class="mb-0 mt-4"> 
+                    {% if usr.first_name %}
+                        {{usr.first_name}} {{usr.first_name}} 
+                    {% else %}
+                        {{usr.username}}
+                    {% endif %}
+                </h2>
+
+                <small class="text-muted">@{{usr.username}} </small>
+                {% if usr.is_staff %}
+                    &nbsp; <i class="bi bi-check-circle"></i>
+                {% endif %}
+
+                {% if user.is_authenticated %}
+                    {% if user == u_page.user %}
+                        <div class="mt-3">
+                            <a href="{% url 'edit-profile' %}" class="btn btn-outline-primary btn-sm">edit profile</a> &nbsp;&nbsp;
+                            <a href="{% url 'logout' %}" class="btn btn-primary btn-sm">logout</a>
+                        </div>
+                    {% endif %}
+                {% endif %}
+                
+            </div>
+        </div>
     </div>
+         
+</div>
+
 
 {% endblock %}
 
