--- a/communityForum/templates/accounts/signup.html
+++ b/communityForum/templates/accounts/signup.html
@@ -8,15 +8,14 @@
 {% load crispy_forms_tags %}
 
 {% for message in messages %}
-            
-<div>
-    <div role="alert">
-        <span>{{message}}</span>
+        
+    <div class="w-50 m-auto">
+        <div class=" alert alert-info alert-dismissible fade show" role="alert">
+            <span>{{message}}</span>
+        </div>
     </div>
-</div>
-
+    
 {% endfor %}
-
 
 {% if user.is_authenticated %}
 
@@ -31,22 +30,28 @@
 
 
 
-<form method="POST">
+<div class="col-4 m-auto">
 
-    <h2>Sign Up</h2>
-
-    {% csrf_token %}
-
-    <div class="mb-3">
-        {{form | crispy}}
+    <form method="POST">
+    
+        <h2 class="mb-4">Sign Up</h2>
+    
+        {% csrf_token %}
+    
+        <div>
+            {{form | crispy}}
+        </div>
+        
+        <button class="mt-3 btn btn-primary" type="submit">Sign Up</button>
+    </form>
+    
+    <div class="mt-2">
+        <small>Already have an account? <a href="{% url 'login' %}">Login</a></small>
     </div>
     
-    <button type="submit">Sign Up</button>
-</form>
+    </div>
+    
 
-<div>
-    <small>Already have an account? <a href="{% url 'login' %}">Login</a></small>
-</div>
 
 {% endif %}
 
