--- a/communityForum/templates/base.html
+++ b/communityForum/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,20 +6,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
+
     <title>ACF - {% block title %}{% endblock %}</title>
 
 </head>
 <body>
 
-    <nav>
-        <a href="{% url 'feeds' %}">Feeds</a>
-        <a href="{% url 'profile' user %}">{{user}}</a>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="/">Community Forum</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+              {% if user.is_authenticated %}
+              <a class="nav-link" href="{% url 'forum-index' %}">Topics</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  {{user}}
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="{% url 'profile' user %}">Profile</a></li>
+                  <li><a class="dropdown-item" href="{% url 'edit-profile' %}">Edit Profile</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                </ul>
+              </li>
+              {% else %}
+              <a class="nav-link pe-4" href="{% url 'login' %}">Log In</a>
+              <a class="nav-link btn btn-primary text-white px-4" href="{% url 'signup' %}">Sign Up</a>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </nav>
 
-    <hr>
+    <main class="container py-3">
+        {% block body %}
+        {% endblock %}
+    </main>
 
-    {% block body %}
-    {% endblock %}
+
+    <footer class="py-4 text-center border-top bg-light">
+      <small>&copy;2020 ATTC Community Forum</small>
+    </footer>
+    
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     
 </body>
 </html>
