--- a/communityForum/templates/posts/post_detail.html
+++ b/communityForum/templates/posts/post_detail.html
@@ -1,15 +1,79 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% block title %} {{ object.title }} {% endblock %}
 
-{% block title %} Feeds {% endblock %}
-
+{% load crispy_forms_tags %}
 {% block body %}
 
-<div>
-    <h3>{{post.title}}</h3>
-    <span>posted by {{post.author}} on {{post.timestamp}} </span>
-    <p>{{post.content}} </p>
+<div class="my-4 col-md-8 col-12 m-auto">
 
+    <div>
+        <h1>{{ object.title }}</h1>
+        <p class="text-muted">Posted by <a href="{% url 'profile' object.author%}">{{object.author}}</a> on {{object.timestamp }} </p>        
+        <p class="mt-2">{{object.body}}</p>
+        {% for tag in object.tags.all %}
+             <small class="p-1 bg-light text-secondary border rounded mr-2">{{tag}}</small>
+        {% endfor %}
+    </div>
+
+    <div class="mt-3">
+        {% if object.author == user %}
+        <div>
+            <a class="btn btn-sm btn-primary" href="{% url 'post-update' object.id %}">edit</a>
+            <a class="btn btn-sm btn-danger" href="{% url 'post-delete' object.id %}">delete</a>
+        </div>
+        {% endif %}
+    </div>
+
+    {% for comment in comments %}
+    <div class=" offset-md-1 row mt-4 border-top p-3">
+        <div class="col-md-1 pt-md-4">
+            <a href="{% url 'profile' comment.author.profile.user.username %}">
+                <img class="rounded-circle" src="{{ comment.author.profile.profile_img.url }}" height="50px" width="50px">
+            </a>
+        </div>
+        <div class="col-md-11 pt-md-4">
+            <p class="text-muted">Answered by <a href="{% url 'profile' comment.author.profile.user.username %}">{{comment.author.profile.user.username}}</a> on {{comment.timestamp}}</p>
+            <p class="mt-2 w-75">{{ comment.body }}</p>
+            {% for tag in comment.tags.all %}
+                <small class="p-1 bg-light text-secondary border rounded mr-2">{{tag}}</small>
+            {% endfor %}
+        </div>
+    </div>
+    {% empty %}
+    <div class=" offset-md-1 row mt-4 border-top p-3 text-center">
+        <p>No aswers yet, Be the first to answer.</p>
+    </div>
+
+    {% endfor %}
+
+    <div class="row mt-3 offset-md-1 bg-light p-3">
+        <div class="col-12 mb-2">
+            <h5>Your Answer</h5>
+        </div>
+
+        <div class="col-1">
+            <a href="{% url 'profile' user %}">
+                <img class="rounded-circle" src="{{ user.profile.profile_img.url }}" height="50px" width="50px">
+            </a>
+        </div>
+        <div class="col-md-11">
+            <form method="POST">
+                {% csrf_token %}
+                
+                {{ form|crispy }}
+    
+                <button class="btn btn-outline-primary mt-3" type="submit">Submit</button>
+            </form>
+        </div>        
+    </div>
 
 </div>
 
-{% endblock %}
+
+<script>
+    document.getElementById("div_id_author").style.display="none"
+    document.getElementById("div_id_post").style.display="none"
+    document.getElementById("div_id_body").getElementsByTagName('label')[0].style.display="none"
+</script>
+
+{% endblock %} 
