added landing page

--- a/communityForum/templates/accounts/profile.html
+++ b/communityForum/templates/accounts/profile.html
@@ -28,7 +28,7 @@
             <div class="col-9">
                 <h2 class="mb-0 mt-4"> 
                     {% if usr.first_name %}
-                        {{usr.first_name}} {{usr.first_name}} 
+                        {{usr.first_name}} {{usr.last_name}} 
                     {% else %}
                         {{usr.username}}
                     {% endif %}
