--- a/communityForum/templates/base.html
+++ b/communityForum/templates/base.html
@@ -27,6 +27,11 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+            
             <div class="navbar-nav ms-auto">
               {% if user.is_authenticated %}
               <a class="nav-link" href="{% url 'forum-index' %}">Topics</a>
