--- a/communityForum/templates/posts/post_detail.html
+++ b/communityForum/templates/posts/post_detail.html
@@ -8,10 +8,10 @@
 
     <div>
         <h1>{{ object.title }}</h1>
-        <p class="text-muted">Posted by <a href="{% url 'profile' object.author%}">{{object.author}}</a> on {{object.timestamp }} </p>        
+        <p class="text-muted">Posted by <a href="{% url 'profile' object.author%}">{{object.author}}</a> on {{object.timestamp |date:"M d, Y" }} </p>        
         <p class="mt-2">{{object.body}}</p>
         {% for tag in object.tags.all %}
-             <small class="p-1 bg-light text-secondary border rounded mr-2">{{tag}}</small>
+            <a href="/tags/{{tag.slug}}" class="text-decoration-none"><small class="p-1 bg-light text-secondary border rounded mr-2">{{tag}}</small></a>
         {% endfor %}
     </div>
 
@@ -32,10 +32,10 @@
             </a>
         </div>
         <div class="col-md-9 pt-md-4">
-            <p class="text-muted">Answered by <a href="{% url 'profile' comment.author.profile.user.username %}">{{comment.author.profile.user.username}}</a> on {{comment.timestamp}}</p>
+            <p class="text-muted">Answered by <a href="{% url 'profile' comment.author.profile.user.username %}">{{comment.author.profile.user.username}}</a> on {{comment.timestamp |date:"M d, Y" }}</p>
             <p class="mt-2 w-75">{{ comment.body }}</p>
             {% for tag in comment.tags.all %}
-                <small class="p-1 bg-light text-secondary border rounded mr-2">{{tag}}</small>
+                <a href="/tags/{{tag.slug}}" class="text-decoration-none"><small class="p-1 bg-light text-secondary border rounded mr-2">{{tag}}</small></a>
             {% endfor %}
         </div>
         <div class="col-2 d-flex flex-column py-2">
