project complete, with beta testing

--- a/communityForum/templates/base.html
+++ b/communityForum/templates/base.html
@@ -63,7 +63,7 @@
 
 
     <footer class="py-4 text-center border-top bg-light">
-      <small>&copy;2020 ATTC Community Forum</small>
+      <small>&copy;2020 ATTC Community Forum  &nbsp; <a href="#">Terms</a>  &nbsp; <a href="mailto:a18dce36@gmail.com">Contact</a> </small>
     </footer>
     
     <!-- Bootstrap JS -->
