--- a/communityForum/templates/accounts/edit-profile.html
+++ b/communityForum/templates/accounts/edit-profile.html
@@ -22,7 +22,7 @@
     <div class="col-5 m-auto">
         <h3 class="mb-4">Edit Profile</h3>
 
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
 
             {{u_form | crispy}}
