--- a/communityForum/templates/posts/index.html
+++ b/communityForum/templates/posts/index.html
@@ -5,7 +5,12 @@
 {% block body %}
 
 <div class="py-3">
-    <h3>All Topics  <a href="{% url 'topic-add' %}" class="btn btn-secondary mx-3"> Add Topic</a> </h3>
+
+    {% if user.is_superuser %}
+    <h3 class="my-3">All Topics  <a href="{% url 'topic-add' %}" class="btn btn-secondary mx-3"> Add Topic</a> </h3>
+    {% else %}
+    <h3 class="my-3">All Topics </h3>
+    {% endif %}
 
     <div class="row py-3">
         {% for topic in topics %}
